<resources>
    <string name="app_name">Sanrakshak</string>
    <string name="login_create">CREATE ACCOUNT</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="email">Enter your email</string>
    <string name="pass">Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="or">OR</string>
    <string name="details">Create Profile</string>
    <string name="home">Home</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="aadhaar">Aadhaar Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="occ">Occupation</string>
    <string name="interest">Select Your Interests</string>
    <string name="interest_done">Done</string>
    <string name="apply">Apply</string>
    <string name="scheme">Application</string>
    <string name="issue">Name of Place</string>
    <string name="date">10/06/1997 - (23:17)</string>
    <string name="your_name">Your Name</string>
    <string name="error">Oops! Got an Error</string>
    <string name="he">HE</string>
    <string name="she">SHE</string>
    <string name="next">NEXT</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="check">CHECK</string>
    <string name="verify">VERIFY</string>
    <string name="verified">Verified</string>
    <string name="pass_reset">Check Your Email\nTo Continue Password Recovery</string>
    <string name="complete_signUp">We need to know about you more\nPlease complete sign up process.</string>
    <string name="remove_pic">Long Press\nTo Remove Picture</string>
    <string name="open_galary">Long Press\nTo Open Gallery</string>
    <string name="blind">I\'m Blind\nPlease Provide Camera Permission</string>
    <string name="dob">Date of Birth (DD/MM/YYYY)</string>
    <string name="verify1">Verification mail sent to your email address</string>
    <string name="verify2">Press Check Button After Clicking On\nVerification Link Sent To Your Email Address</string>
    <string name="verify_done">Great!\nAccount Verified</string>
    <string name="verify_fail">Oops!\nAccount Not Verified</string>
    <string name="add_dp">Add Your Profile Picture</string>
    <string name="select_gender">Select Your Gender Here</string>
    <string name="resend">Resending verification email.</string>
    <string name="allow_camera">Allow Access</string>
    <string name="failed_send">Failed to send verification email.</string>
    <string name="didnt_recieve">Didn\'t Receive a mail?, Resend !</string>
    <string name="error_resend">Error Sending Verification Mail</string>
    <string name="add_notes">Add Notes Option</string>
    <string name="add_password">Account created successfully\nAdd password for better security</string>
    <string name="fb_verify">Need to verify account\nbefore connecting with facebook</string>

    <string name="facebook_app_id">189684868246879</string>
    <string name="fb_login_protocol_scheme">fb189684868246879</string>
    <string name="click">Click</string>
    <string name="flash">flash</string>
    <string name="camera_flip">camera_flip</string>
    <string name="i_m_sad">I\'m Sad</string>
    <string name="offline">SERVER OFFLINE, RECONNECTING</string>
    <string name="connect">CONNECTING TO SERVER</string>
    <string name="email_wait">Waiting for Email Verification</string>
    <string name="map_preview">Map Preview</string>
    <string name="unreachable">SERVER UNREACHABLE</string>
    <string name="mapsdownload">Google Maps Application is required for navigation to work!</string>
    <string name="download">Download</string>
    <string name="sheet_title">Title Goes Here</string>
    <string name="sheet_content">Content of the sheet goes here. Content of the sheet maybe big or small depending upon the requirement</string>
    <string name="resources">SETTING UP RESOURCES</string>
    <string name="fetch_profile">FETCHING PROFILE FROM</string>
    <string name="create_sanrakshak">CREATING SANRAKSHAK PROFILE</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="intensity">Intensity</string>
    <string name="timeleft">Days Left</string>
    <string name="aws">AWS</string>
    <string name="lora">LoRa</string>
</resources>


