<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    tools:context=".ProfileActivity">
    <com.google.android.cameraview.CameraView
        android:id="@+id/cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:adjustViewBounds="false"
        android:layout_centerInParent="true"
        app:autoFocus="true"
        app:cameraAspectRatio="16:9"
        app:facing="front"
        app:flash="off"
        app:useHighResPicture="false"
        app:enableZoom="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:background="#59000000"
        android:id="@+id/click_pane">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentTop="true">
            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/centerButtons"
                android:layout_centerInParent="true">
            </RelativeLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/shutter"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:contentDescription="@string/click"
                android:visibility="gone"
                android:id="@+id/click"
                style="@style/SelectableItemBackgroundBorderless"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/flash_off"
                android:layout_alignStart="@+id/centerButtons"
                android:layout_centerVertical="true"
                android:layout_marginStart="-120dp"
                android:contentDescription="@string/flash"
                android:id="@+id/flash"
                style="@style/SelectableItemBackgroundBorderless"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/camera_flip"
                android:layout_alignEnd="@+id/centerButtons"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:layout_marginEnd="-112dp"
                android:contentDescription="@string/camera_flip"
                android:id="@+id/camera_flip"
                style="@style/SelectableItemBackgroundBorderless"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/permission_camera"
        android:visibility="gone"
        android:background="#000">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/im_sad"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/i_m_sad"
                android:layout_marginTop="25dp"
                android:src="@drawable/sad"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_sad"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#fff"
                android:text="@string/blind"
                android:id="@+id/permission_text"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_below="@+id/permission_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/allow"
                android:textColor="#fff"
                android:layout_marginTop="15dp"
                android:id="@+id/allow_camera"
                android:text="@string/allow_camera"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/galary"
        android:background="#fff">
    </RelativeLayout>
</RelativeLayout>