<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parentPanel">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@mipmap/back"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logo_div"
                android:visibility="gone"
                android:background="@color/colorPrimary"
                android:layout_centerInParent="true">
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/splash_cover"
                android:background="@color/colorPrimary"
                android:layout_centerInParent="true">
            </RelativeLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ico_splash"
                android:layout_centerInParent="true"
                android:src="@mipmap/icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:id="@+id/appNameSplash"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardElevation="3dp"
                app:cardCornerRadius="5dp"
                android:id="@+id/data_div"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-5dp"
                android:paddingBottom="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_alignParentTop="true"
                        android:id="@+id/dp_cover"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/back_profile"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/profile_pane"
                        android:background="@drawable/profile_background">
                        <RelativeLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="80dp"
                            android:layout_marginStart="8.5dp"
                            android:elevation="100dp"
                            android:id="@+id/profile_menu_cov">
                            <RelativeLayout
                                android:layout_width="126.5dp"
                                android:layout_height="126.5dp"
                                android:layout_centerInParent="true"
                                android:background="@drawable/profile_back">
                            </RelativeLayout>
                            <ProgressBar
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:id="@+id/loading_profile"
                                android:visibility="invisible"
                                android:layout_centerInParent="true"/>
                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:id="@+id/profile"
                                android:layout_centerInParent="true"
                                android:src="@drawable/user_profile"
                                app:civ_border_width="0dp"
                                app:civ_shadow="false"/>
                        </RelativeLayout>
                        <com.rm.rmswitch.RMSwitch
                            android:id="@+id/gender"
                            android:layout_width="100dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="150dp"
                            android:layout_marginEnd="30dp"
                            android:layout_alignParentEnd="true"
                            app:checked="true"
                            app:forceAspectRatio="false"
                            app:enabled="true"
                            app:switchDesign="slim"
                            app:switchBkgCheckedColor="@color/gender_back"
                            app:switchBkgNotCheckedColor="@color/gender_back"
                            app:switchToggleCheckedColor="@color/gender_male"
                            app:switchToggleCheckedImage="@drawable/male"
                            app:switchToggleNotCheckedColor="@color/gender_female"
                            app:switchToggleNotCheckedImage="@drawable/female"/>
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@+id/gender"
                            android:layout_marginTop="155dp"
                            android:layout_marginStart="-115dp"
                            android:textAlignment="textEnd"
                            android:id="@+id/gender_tag"
                            android:textSize="22sp"
                            android:text="@string/male"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:id="@+id/form_panel"
                            android:padding="10dp"
                            android:layout_marginTop="-65dp"
                            android:layout_below="@+id/profile_menu_cov">
                            <EditText
                                android:id="@+id/f_name"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="58dp"
                                android:textColor="#616161"
                                android:backgroundTint="#fff"
                                android:drawablePadding="10dp"
                                android:drawableStart="@drawable/user"
                                android:hint="@string/fname"
                                android:inputType="textPersonName"
                                android:textColorHint="#c7c7c7"
                                android:maxLines="1"
                                android:paddingEnd="20dp"
                                android:paddingStart="10dp"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:id="@+id/divider1"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_below="@+id/f_name"
                                android:background="#616161"/>
                            <EditText
                                android:id="@+id/l_name"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_below="@+id/divider1"
                                android:layout_marginStart="5dp"
                                android:textColor="#616161"
                                android:drawablePadding="10dp"
                                android:backgroundTint="#fff"
                                android:drawableStart="@drawable/user"
                                android:hint="@string/lname"
                                android:inputType="textPersonName"
                                android:textColorHint="#c7c7c7"
                                android:maxLines="1"
                                android:paddingEnd="20dp"
                                android:paddingStart="10dp"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:id="@+id/divider2"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_below="@+id/l_name"
                                android:background="#616161"/>
                            <EditText
                                android:id="@+id/dob"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_below="@+id/divider2"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="50dp"
                                android:textColor="#616161"
                                android:drawablePadding="10dp"
                                android:backgroundTint="#fff"
                                android:drawableStart="@drawable/dob"
                                android:hint="@string/dob"
                                android:inputType="date"
                                android:textColorHint="#c7c7c7"
                                android:maxLines="1"
                                android:paddingEnd="10dp"
                                android:paddingStart="10dp"/>
                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:id="@+id/dob_chooser"
                                android:padding="4dp"
                                android:layout_marginEnd="22dp"
                                android:layout_marginBottom="10dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignBottom="@+id/dob"
                                style="@style/SelectableItemBackgroundBorderless"
                                android:src="@drawable/calendar"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:id="@+id/divider3"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_below="@+id/dob"
                                android:background="#616161"/>
                            <EditText
                                android:id="@+id/aadhaar"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_below="@+id/divider3"
                                android:layout_marginStart="5dp"
                                android:textColor="#616161"
                                android:drawablePadding="12dp"
                                android:backgroundTint="#fff"
                                android:drawableStart="@drawable/id"
                                android:hint="@string/aadhaar"
                                android:inputType="textPersonName"
                                android:textColorHint="#c7c7c7"
                                android:maxLines="1"
                                android:paddingEnd="20dp"
                                android:paddingStart="10dp"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:id="@+id/divider4"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_below="@+id/aadhaar"
                                android:background="#616161"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:id="@+id/done"
                android:src="@drawable/tick"
                android:layout_above="@+id/data_div"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="25dp"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/page_tag"
                android:text="@string/details"
                android:layout_above="@+id/data_div"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="85dp"
                android:visibility="invisible"
                android:textSize="28sp"
                android:textColor="@color/profile"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/camera_pane"
            android:background="#000"
            android:visibility="gone"
            android:layout_centerInParent="true">
            <include layout="@layout/activity_camera"/>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>